<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_weight="1"
            android:text="@string/dice_set"
            android:textAlignment="textEnd"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/diceSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40sp"
            android:layout_weight="1"
            android:text="@string/_1d6"
            android:textAlignment="center"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_weight="1"
            android:text="@string/total"
            android:textAlignment="textEnd"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="40sp"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textSize="40sp" />
    </LinearLayout>

    <Button
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80sp"
        android:layout_weight="1"
        android:onClick="Roll"
        android:text="@string/roll"
        android:textSize="20sp" />


    <Button
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20sp"
        android:layout_weight="1"
        android:onClick="settingsClicked"
        android:text="@string/settings"
        android:textSize="20sp" />

</LinearLayout>