<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/numDice"
        android:layout_width="376dp"
        android:layout_height="74dp"
        android:layout_marginTop="84dp"
        android:text="@string/number_of_dice"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sides"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="242sp"
        android:layout_height="83sp"
        android:layout_marginBottom="112dp"
        android:onClick="doneClicked"
        android:text="@string/done"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/numDiceInput"
        android:layout_width="100sp"
        android:layout_height="60sp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/sides"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numDice"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/sidesInput"
        android:layout_width="100sp"
        android:layout_height="60sp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sides"
        app:layout_constraintVertical_bias="0.288" />

</androidx.constraintlayout.widget.ConstraintLayout>